remove the security